Add calculation logic

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <button class="btn" data-sign="8">8</button>
     <button class="btn" data-sign="9">9</button>
     <button class="btn" data-sign="0">0</button>
-    <button class="btn" data-sign="+">+</button>
-    <button class="btn" data-sign="-">-</button>
-    <button class="btn" data-sign="x">x</button>
-    <button class="btn" data-sign="/">/</button>
-    <button class="btn" data-sign="=">=</button>
+    <button class="btn" data-sign=" + ">+</button>
+    <button class="btn" data-sign=" - ">-</button>
+    <button class="btn" data-sign=" x ">x</button>
+    <button class="btn" data-sign=" / ">/</button>
+    <button class="equals" data-sign="=">=</button>
     <script src="index.js"></script>
   </body>
 </html>
