Add delete/clear buttons

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <button class="btn" data-sign="0">0</button>
     <button class="btn" data-sign=" + ">+</button>
     <button class="btn" data-sign=" - ">-</button>
-    <button class="btn" data-sign=" x ">x</button>
-    <button class="btn" data-sign=" / ">/</button>
+    <button class="btn" data-sign=" * ">x</button>
+    <button class="btn" data-sign=" / ">÷</button>
     <button class="equals" data-sign="=">=</button>
+    <button class="delete">delete</button>
+    <button class="clear">clear</button>
     <script src="index.js"></script>
   </body>
 </html>
