Fix bug with delete button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="operations-display">0</div>
       <div class="btn-container">
         <div class="numbers-container">
-          <button class="btn clear operations">AC</button>
-          <button class="btn delete operations">
+          <button class="clear operations">AC</button>
+          <button class="delete operations">
             <img src="./assets/backspace.svg" />
           </button>
           <button class="btn" data-sign="1">1</button>
